fix webkit z-index

--- a/Source/Letterbook.Web/wwwroot/css/app.css
+++ b/Source/Letterbook.Web/wwwroot/css/app.css
@@ -385,6 +385,7 @@ button {
     bottom: calc(100% - 100vh);
     background: pink;
     order: 10;
+    z-index: 10;
 }
 
 .app .thread {
